<resources>
    <string name="app_name">jcho1-SizeBook</string>
    <string name="entry">New Entry Name:</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="neck">Neck</string>
    <string name="bust">Bust</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="inseam">Inseam</string>
    <string name="comment">Comment</string>


</resources>
