<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="com.example.jeff.jcho1_sizebook.new_entry">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neck"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bust"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waist"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hip"
            android:textSize="16pt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inseam"
            android:textSize="16pt"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:onClick="clear"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entry_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal" />

        <EditText
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:scrollbars="horizontal" />

        <EditText
            android:id="@+id/neck"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:scrollbars="horizontal" />

        <EditText
            android:id="@+id/bust"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:inputType="numberDecimal"
            android:ems="10"/>

        <EditText
            android:id="@+id/chest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:inputType="numberDecimal"
            android:ems="10"/>

        <EditText
            android:id="@+id/waist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:inputType="numberDecimal"
            android:ems="10"/>

        <EditText
            android:id="@+id/hip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:inputType="numberDecimal"
            android:ems="10"/>

        <EditText
            android:id="@+id/inseam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:inputType="numberDecimal"
            android:ems="10"/>

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="save"
            android:inputType="numberDecimal"
            android:ems="10"/>


    </LinearLayout>

</LinearLayout>